olen kisiler icin guncelleme yapildi